[tool.poetry]
name = "hw5"
version = "0.1.0"
description = "hw5"
authors = ["olga-ivanko <o.ivanko@me.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.9.1"
asyncio = "^3.4.3"
websockets = "^12.0"
names = "^0.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
